# artful-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: coding-linter.yml  publish.yml
artisan-http/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
artisan-http/docs/: ARCHITECTURE.md
artisan-http/examples/: basic.rs  config.rs  custom_plugin.rs  direction.rs  shortcut.rs
artisan-http/src/: config.rs  direction.rs  error.rs  http.rs  lib.rs  packer.rs  plugin.rs  rocket.rs  shortcut.rs
artisan-http/src/directions/: json.rs
artisan-http/src/packers/: json.rs  mod.rs
artisan-http/src/plugins/: add_payload_body.rs  add_radar.rs  mod.rs  parser.rs
artisan-http/tests/: artful_test.rs  direction_test.rs  flow_ctrl_test.rs  integration_test.rs  packer_test.rs  rocket_test.rs  shortcut_test.rs
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-14-artful-rs-v010-mvp-implementation.md
docs/superpowers/specs/: 2026-04-14-artful-rs-v010-mvp-design.md
examples/: basic.rs  config.rs  custom_plugin.rs  direction.rs  shortcut.rs
src/: artful.rs  artisan.rs  config.rs  direction.rs  error.rs  flow_ctrl.rs  http.rs  lib.rs  packer.rs  plugin.rs  rocket.rs  shortcut.rs
src/directions/: json.rs  mod.rs
src/packers/: json.rs  mod.rs
src/plugins/: add_payload_body.rs  add_radar.rs  log.rs  mod.rs  parser.rs  start.rs
tests/: artful_test.rs  direction_test.rs  flow_ctrl_test.rs  integration_test.rs  packer_test.rs  rocket_test.rs  shortcut_test.rs
