[package]
name = "artisan"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
members = ["artisan-*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/yansongda/artisan"

[features]
default = ["http"]
http = ["dep:artisan-http"]

[dependencies]
artisan-http = { path = "artisan-http", version = "0.12.0", optional = true }
