[package]
name = "artisan"
version = "0.13.0"
description = "Artisan workspace facade with feature-controlled re-export"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
members = ["artisan-*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/yansongda/artisan"

[features]
default = ["http"]
http = ["dep:artisan-http"]

[dependencies]
artisan-http = { path = "artisan-http", version = "0.13.0", optional = true }

[package.metadata.docs.rs]
all-features = true
